# video-analytics-bot

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/config/: settings.py
app/db/: engine.py
app/db/models/: base.py  snapshot.py  video.py
entrypoints/: app-entrypoint.sh
migration/: env.py
src/: main.py
src/app/bot/: router.py
src/app/config/: settings.py
src/app/db/: engine.py  session.py
src/app/db/models/: __init__.py  base.py  mixins.py  snapshotmodel.py  video.py  videomodel.py
src/app/exceptions/: exceptions.py
src/app/llm/: db_query.py  openai_llm.py
src/app/schemas/: snapshot.py  video.py
src/app/services/: db_query.py  llm.py
src/migration/versions/: 24d298486f6a_initial_revision.py
src/scripts/: load_data.py
